# diff-tool

./: .gitignore  CONTRACT.md  IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  TESTING.md  pyproject.toml  pytest.ini  test_api.py  test_file1.txt  test_file2.txt
backend/: diff_service.py  file_service.py  main.py  requirements.txt
backups/: original.txt.bu-20260215-123303  original.txt.bu-20260215-124223  original.txt.bu-20260215-124534
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  vite.lib.config.js
frontend/lib/: DiffViewer.vue  ViewerApp.vue  entry.js  viewer.css
src/diff_tool/: __init__.py  diff_service.py
src/diff_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_api.py  test_backend.py  test_diff_rendering.py  test_e2e.py  test_scroll_sync.py
tmp/1d140159-bb5d-4666-9445-48cdeb0189ef/: modified.txt
tmp/39a392fb-4235-4bb7-aada-65278f1fda30/: modified.txt
tmp/40f9b709-09e6-44a9-beca-55b746196161/: modified.txt
tmp/4dcfa16d-1964-4b0b-8d69-cdc138e9d44c/: original.txt
tmp/54b26546-8445-474f-94c2-0049a178e6f9/: modified.txt
tmp/85f951fe-0b60-4e1c-8be4-3792c844dc91/: modified.txt
tmp/951f7c0d-feee-4cc9-8af2-5a3da25874a2/: modified.txt
tmp/ac02758b-68f3-46ad-baee-23da5dc818ae/: original.txt
tmp/b3ea5b54-4805-402f-b6fa-b530877680b2/: original.txt
tmp/b7eefca7-937d-4176-8d89-27b4df378d41/: original.txt
tmp/e3423111-cfd6-4dd0-9f17-b6acce6a7e31/: modified.txt
